src/styles/css/cart.scss
#cart{
    top:0px;
    z-index: 1;
    position: relative;
    padding: 0;
    color:black;
    .cart-page-background{
        display: flex;
        justify-content: center;
        align-items: center;

    }
}

.cart-product-box {
    display:flex;
    justify-content: center;
    align-items: center;
    padding:10% 3%;
     .not-selected{
        border: 10px solid lightblue;
        width:170px;
        height:220px;
    }
    .selected{
        transition:.4s;
        border:10px solid blue;
    }

    .product-inf{
        display:flex;
        flex-direction: column;
        padding-left:5%;
       line-height:30px;
       position: relative;
       .stars-container{
        width:150px;
        position: relative;
        display:flex;
    }
       .ratings {
        position: relative;
        color: lightgray;
        overflow: hidden;
        text-shadow: .1em .1em gray;
       }
       
       .full-stars {
        position: absolute;
        left: 0;
        top: 0;
        white-space: nowrap;
        overflow: hidden;
        color: gold;
       }
       .empty-stars:before, .full-stars:before {
        content:"\2605\2605\2605\2605\2605";
        font-size: 30px;
        display:block;
        
        }
        
    
    }
    .cart-cart-quantity{
        display:flex;
        
    }
   
    .show-type{
        display: flex;
        // justify-content: center;
        .not-choose{
            border:2px solid green;
            border-radius: 35%;
            display:inline-block;
            padding:3px;
            margin:5px;
            cursor:pointer;
            
        }
    }
        .ischoose {
            background-color :orange;
        
        }
    
}

.cart-product-story{
    display: inline-block;
    line-height: 1.5;
    font-size: 20px;
    font-family: Arial, Helvetica, sans-serif;
    padding:4%;
    h4 {
        text-align: center;
    }
}


.no-items{
    font-size: 30px;
    text-align:center;
    a{
        margin:0 auto;    
    }
    img{
        height:450px;
        margin: 15px;
    }
}


.cart-item-list-show{
    position:fixed;
    writing-mode: vertical-rl;
    transform: rotate(-180deg);
    text-align: center;
    border:4px solid lightblue;
    background: rgb(243, 224, 224);
    padding:5px;
    right:14px;
    bottom:10%;
    height:100px;
    color:orangered;
    z-index: 1;

}
.cart-item-list-close{
    position: absolute;
    right:20px;
    top:20px;
    cursor: pointer;
}

.cart-check-items-listbox{
    position: fixed;
    overflow: scroll;
    border:3px solid lightblue;
    background:rgb(199, 236, 97);
    padding:20px;
    width:350px;
    max-height:600px;
    z-index: 2;
    transition: 0.8s linear;
    transform: translateX(350px);
    right:0;bottom:6%;


    .cart-check-items-list{
        border-bottom: 2px solid lightblue;
        margin:10px 0;
    }
}
.cart-check-items-listbox-show{
    transform: translateX(0);

}

